--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -1,9 +1,27 @@
 @use "../globals";
 section.hero-section {
   display: flex;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+  padding: 0 3.125rem;
+  .hero-image{
+    width: 50%;
+    margin-right: auto;
+    img{
+      height: 90%;
+      width: 90%;
+    }
+  }
   .hero-text {
     width: 50%;
     color: globals.$white;
+    h1{
+      font-size: clamp(2rem, 3rem, 3rem);
+    }
     span.emphasized {
       font-size: 3rem;
       font-weight: 400;
@@ -18,7 +36,8 @@ section.hero-section {
       }
       button {
         height: 2.5rem;
-        width: 6.875rem;
+        width: auto;
+		    padding: 0 globals.$margin;
         background-color: globals.$secondary-color;
         margin-right: 1.375rem;
         border: none;
