--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -19,7 +19,6 @@
         padding: 0.688rem 0.938rem;
         border: none;
         border-radius: globals.$border-radius-small;
-        
     }
     .login-btn-parent{
         span{
@@ -27,7 +26,8 @@
         }
         button{
             height: 2.5rem;
-            width: 6.875rem;
+            width: auto;
+		    padding: 0 globals.$margin;
             background-color: globals.$secondary-color;
             margin-left: 1.375rem;
             border: none;
