--- a/src/scss/globals/boilerplate.scss
+++ b/src/scss/globals/boilerplate.scss
@@ -13,6 +13,16 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
+    color: colors.$black;
     background-color: colors.$black;
     font-family: 'Roboto', sans-serif;
+}
+
+.App{
+    height: 100vh;
+    overflow: auto;
+}
+
+input:focus{
+    outline: none;
 }
