--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -4,8 +4,9 @@
     
     height: 3.4375rem;
     justify-content: space-between;
+    
     align-items: center;
-    width: 100vw;
+    width: 100%;
     padding: 0 3.125rem;
     color: globals.$black;
 
