--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -7,7 +7,7 @@
     
     align-items: center;
     width: 100%;
-    padding: 0 3.125rem;
+    padding: 0 globals.$margin-big;
     color: globals.$black;
 
     h1{
@@ -17,22 +17,22 @@
     input{
         height: 2.5rem;
         width: 30rem;
+        background-color: globals.$white;
+        color: globals.$black;
         padding: 0.688rem 0.938rem;
         border: none;
         border-radius: globals.$border-radius-small;
+        
+    }
+    input::placeholder{
+        color: globals.$black
     }
     .login-btn-parent{
         span{
             color: globals.$secondary-color;
         }
         button{
-            height: 2.5rem;
-            width: auto;
-		    padding: 0 globals.$margin;
-            background-color: globals.$secondary-color;
             margin-left: 1.375rem;
-            border: none;
-            border-radius: globals.$border-radius-full;
         }
     }
 }
