--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -44,3 +44,23 @@ section.become-contributor{
     height: 70%;
   }
 }
+
+section.keep-reading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3.75rem;
+  height: 100vh;
+
+  h1{
+    font-size: 3.75rem;
+  }
+  h1.emphasized{
+    color: globals.$primary-color;
+  }
+  p{
+    text-align: center;
+    width: 65%;
+  }
+}
