--- a/src/scss/components/upload.scss
+++ b/src/scss/components/upload.scss
@@ -10,21 +10,29 @@ main.upload{
         align-items: baseline;
         flex-direction: column;
         input.gbooks-link,
-        button{
-            margin-top: globals.$margin-big;
-            display: block;
-        }
         label{
             margin-top: globals.$margin-small;
-            color: globals.$light-white;
+            color: globals.$white;
             display: flex;
             align-items: center;
+        }
+        label{
+            color: globals.$light-white;
         }
         input[type="file"]{
             display: none;
         }
-    
-    
+        .buttons-container{
+            display: flex;
+            margin-top: 3.75rem;
+            button{
+                display: block;
+                margin-top: 0;
+            }
+            button.upload:disabled{
+                background-color: #488956;
+            }
+        }
     }
     img.bookwall{
         width: 50%;
