explore page styling

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -2,3 +2,7 @@
 @forward 'home';
 @forward 'userauth';
 @forward 'upload';
+@forward 'pdfrenderer';
+@forward 'bookbasicdetails';
+@forward 'explore';
+@forward 'authorbasicdetails';
