--- a/src/scss/globals/colors.scss
+++ b/src/scss/globals/colors.scss
@@ -1,6 +1,6 @@
 $primary-color: #FFD673;
 $light-primary-color: #ffd57368;
-$secondary-color: #80e897;
+$secondary-color: rgb(128, 232, 151);
 
 $black: #1f1f1f;
 $white: #ffffff;
