--- a/src/scss/components/explore.scss
+++ b/src/scss/components/explore.scss
@@ -3,6 +3,7 @@ main.explore{
     padding-left: globals.$margin-big;
     section{
         margin-top: globals.$margin-big;
+        margin-bottom: globals.$margin-small;
     }
     .books-details-container{
         display: flex;
