--- a/src/scss/globals/colors.scss
+++ b/src/scss/globals/colors.scss
@@ -1,8 +1,8 @@
-$primary-color: #FFD673;
-$light-primary-color: #ffd57368;
+$primary-color: rgb(255, 214, 117);
+$light-primary-color: rgba(255, 213, 115, 0.408);
 $secondary-color: rgb(128, 232, 151);
 
-$black: #1f1f1f;
-$white: #ffffff;
-$light-white: #ffffff50;
-$gray:#c4c4c4;
+$black: rgb(31, 31, 31);
+$white: rgb(255, 255, 255);
+$light-white: rgba(255, 255, 255, 0.314);
+$gray:rgb(196, 196, 196);
