book details basic styling

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -3,6 +3,7 @@
 @forward 'userauth';
 @forward 'upload';
 @forward 'pdfrenderer';
+@forward 'bookdetails';
 @forward 'bookbasicdetails';
 @forward 'explore';
 @forward 'authorbasicdetails';
