--- a/src/scss/globals/measurements-vars.scss
+++ b/src/scss/globals/measurements-vars.scss
@@ -1,5 +1,6 @@
 $border-radius-small: 0.75rem;
 $border-radius-full: 3.125rem;
 $margin: 1.875rem;
-$margin-big: 3.75rem;
 $margin-small: 0.9375rem;
+$margin-big: 3.75rem;
+$margin-huge: 7.5rem;
