--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -9,7 +9,7 @@
     width: 100%;
     padding: 0 globals.$margin-big;
     color: globals.$black;
-
+    z-index: 60;
     h1{
         font-size: 1.875rem;
         color: globals.$primary-color;
