fetch messages on scroll and display message date

--- a/src/scss/components/chatbox.scss
+++ b/src/scss/components/chatbox.scss
@@ -7,6 +7,9 @@ section.chatbox{
         height: 80%;
         padding: 0 globals.$margin;
         overflow-y: scroll;
+        span{
+            width: 100%;
+        }
     }
     form{
         display: flex;
