--- a/src/scss/components/chatbox.scss
+++ b/src/scss/components/chatbox.scss
@@ -1,6 +1,6 @@
 @use '../globals';
 section.chatbox{
-    height: calc(100vh - 3.4375rem);
+    height: calc(100vh - globals.$margin-big);
     padding: 0 globals.$margin;
     .messages-container{
         width: 100%;
