--- a/src/scss/components/reviews.scss
+++ b/src/scss/components/reviews.scss
@@ -14,6 +14,10 @@ section.reviews{
             margin: 0 globals.$margin-small;
         }
     }
+    textarea{
+        height: auto;
+        overflow-y: auto;
+    }
     .review{
         display: flex;
         flex-direction: column;
