--- a/src/scss/components/bookdetails.scss
+++ b/src/scss/components/bookdetails.scss
@@ -2,6 +2,7 @@
 main.book-details{
     position: absolute;
     padding: 0 globals.$margin-big;
+    width: 100%;
     section.main-details{
         display: flex;
         
