navbar update after sign in

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -9,6 +9,7 @@
 @forward 'explore';
 @forward 'authorbasicdetails';
 @forward 'searchpage';
+@forward 'threads';
 @forward 'chatbox';
 @forward 'message';
 @forward 'reviews';
