--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -8,7 +8,7 @@ section.hero-section {
   align-items: center;
   justify-content: space-between;
   height:100%;
-  padding: 0 globals.$margin-big;
+  padding: 0 globals.$margin;
   img.hero-image{
     height: 90%;
     width: 45%;
