--- a/src/scss/components/upload.scss
+++ b/src/scss/components/upload.scss
@@ -4,7 +4,7 @@ main.upload{
     form.upload-form{
         width: 50%;
         height: 100vh;
-        padding-left: globals.$margin-big;
+        padding-left: globals.$margin;
         display: flex;
         justify-content: center;
         align-items: baseline;
