--- a/src/scss/components/explore.scss
+++ b/src/scss/components/explore.scss
@@ -1,6 +1,6 @@
 @use '../globals';
 main.explore{
-    padding-left: globals.$margin-big;
+    padding-left: globals.$margin;
     section{
         margin-top: globals.$margin-big;
         margin-bottom: globals.$margin-small;
