--- a/src/scss/components/searchpage.scss
+++ b/src/scss/components/searchpage.scss
@@ -1,7 +1,7 @@
 @use '../globals';
 main.search-page{
     margin-top: globals.$margin-big;
-    padding-left: globals.$margin-big;
+    padding-left: globals.$margin;
     .book-results{
         margin-top: globals.$margin;
         h2{
