my library basic styling

--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -42,6 +42,11 @@
         }
     }
     .login-btn-parent{
+        display: flex;
+        align-items: center;
+        img{
+            border-radius: 50%;
+        }
         span{
             color: globals.$secondary-color;
         }
