--- a/src/scss/components/bookbasicdetails.scss
+++ b/src/scss/components/bookbasicdetails.scss
@@ -1,26 +1,23 @@
 @use "../globals";
 .book-basic-details {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  
+  width: fit-content;
   margin-right: globals.$margin;
-  background-size: cover;
-  background-repeat: no-repeat;
-  img{
+  img {
     height: 14rem;
-    
+    width: 9.75rem;
     border-radius: globals.$border-radius-small;
+    object-position: 0px 0px;
+    object-fit: cover;
   }
-  
+
   span {
+    display: block;
     margin-top: calc(globals.$margin-small - 5px);
-    width: 60%;
+    width: 90%;
     font-weight: 400;
   }
-  span:hover{
+  span:hover {
     color: globals.$primary-color;
     cursor: pointer;
   }
-
 }
