--- a/src/scss/globals/colors.scss
+++ b/src/scss/globals/colors.scss
@@ -5,4 +5,4 @@ $secondary-color: rgb(128, 232, 151);
 $black: rgb(31, 31, 31);
 $white: rgb(255, 255, 255);
 $light-white: rgba(255, 255, 255, 0.314);
-$gray:#333333;
+$gray:rgb(51, 51, 51);
