--- a/src/scss/globals/colors.scss
+++ b/src/scss/globals/colors.scss
@@ -3,6 +3,6 @@ $light-primary-color: rgba(255, 213, 115, 0.408);
 $secondary-color: rgb(128, 232, 151);
 
 $black: rgb(31, 31, 31);
-$white: rgb(255, 255, 255);
+$white: #ffffff;
 $light-white: rgba(255, 255, 255, 0.314);
 $gray:rgb(51, 51, 51);
