--- a/src/scss/globals/universal.scss
+++ b/src/scss/globals/universal.scss
@@ -1,13 +1,13 @@
 @use "./colors" as *;
 @use "./measurements-vars" as *;
-body::-webkit-scrollbar{
+::-webkit-scrollbar{
   width: 10px;
 }
-body::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb{
   border-radius: $border-radius-full;
   background-color: $light-primary-color;
 }
-body::-webkit-scrollbar-track{
+::-webkit-scrollbar-track{
   background: transparent;
 }
 ::-webkit-scrollbar-thumb:hover {
