--- a/src/scss/components/threads.scss
+++ b/src/scss/components/threads.scss
@@ -1,13 +1,54 @@
 @use '../globals';
 main.thread-page{
+    display: flex;
     width: 100%;
-    section.chatbox{
-        height: calc(100vh - globals.$margin-big);
-        padding: 0 globals.$margin;
+    height: calc(100vh - globals.$margin-big);
+    padding: 0 globals.$margin;
+    aside{
+        display: flex;
+        flex-direction: column;
+        gap: globals.$margin;
+        width: 30%;
+        height: 100%;
+        padding: globals.$margin-small 0;
         
+        .joined-threads{
+            display: flex;
+            flex-direction: column;
+            gap: globals.$margin-small;
+            height: 100%;
+            overflow: auto;
+        }
+        .thread{
+            display: flex;
+            align-items: center;
+            padding: 0 globals.$margin-small;
+            width: 100%;
+            height: 2.5rem;
+            border-radius: globals.$border-radius-small;
+        }
+        .thread:hover{
+            color: globals.$secondary-color;
+            cursor: pointer;
+            background-color: globals.$gray;
+        }
+        form{
+            height: 20%;
+        }
+        input{
+            width: 100%;
+        }
+    }
+    section.chatbox{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 0 globals.$margin;
+        padding-bottom: globals.$margin-small;
         .messages-container{
             width: 100%;
-            height: 80%;
+            height: 100%;
             padding: 0 globals.$margin;
             overflow-y: scroll;
             span{
