--- a/src/scss/components/threads.scss
+++ b/src/scss/components/threads.scss
@@ -29,6 +29,10 @@ main.thread-page{
         .thread:hover{
             color: globals.$secondary-color;
             cursor: pointer;
+
+        }
+        .thread.active{
+            color: globals.$secondary-color;
             background-color: globals.$gray;
         }
         form{
