--- a/src/scss/components/threads.scss
+++ b/src/scss/components/threads.scss
@@ -35,11 +35,28 @@ main.thread-page{
             color: globals.$secondary-color;
             background-color: globals.$gray;
         }
+        dialog{
+            background-color: globals.$black;
+            border: 0;
+            border-radius: globals.$border-radius-small;
+            padding: globals.$margin;
+        }
+        dialog::backdrop{
+            background-color: rgba(255, 213, 115, 0.3);
+        }
         form{
             height: 20%;
+            width: max-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         input{
-            width: 100%;
+            margin-bottom: globals.$margin-small;
+            width: 30rem;
+        }
+        button{
+            outline: none;
         }
     }
     section.chatbox{
