--- a/src/scss/components/mylibrary.scss
+++ b/src/scss/components/mylibrary.scss
@@ -26,4 +26,15 @@ main.my-library{
         display: flex;
         gap: globals.$margin;
     }
+    .no-shelves{
+        display: flex;
+        //because parent has margin top
+        margin-top: -3.75rem;
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: globals.$margin-big;
+    }
 }
