--- a/src/scss/globals/universal.scss
+++ b/src/scss/globals/universal.scss
@@ -35,6 +35,16 @@ button:disabled{
   background-color: #488956;
 }
 
+dialog{
+  background-color: $black;
+  border: 0;
+  border-radius: $border-radius-small;
+  padding: $margin;
+}
+dialog::backdrop{
+  background-color: rgba(255, 213, 115, 0.2);
+}
+
 input,
 label,
 textarea {
